fixes #11 - organizations page rtl alignment

--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
@@ -1,6 +1,7 @@
 .heading, .module-heading, a, p, .dataset-list, .search-form, h1,
 #dataset-resources, .additional-info, .tags, td.dataset-details, th.dataset-label,
-.context-info, .flash-messages, .page_primary_action, .breadcrumb
+.context-info, .flash-messages, .page_primary_action, .breadcrumb,
+.media-item
 {
     direction: rtl;
     text-align: right;
